# language-learning-app

backend/: base.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/agents/: evaluation_agent.py  lesson_agent.py  practice_agent.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/services/: api-schemas.ts  api.ts
frontend/src/views/: DashboardView.vue  LessonView.vue  PracticeView.vue  ReviewView.vue
resources/db/: insert_initial_data.sql
