[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
]
